--- a/cfg/OmniPathFollowerReconfigure.cfg
+++ b/cfg/OmniPathFollowerReconfigure.cfg
@@ -1,7 +1,6 @@
 #!/usr/bin/env python
 
 from dynamic_reconfigure.parameter_generator_catkin import *
-#from local_planner_limits import add_generic_localplanner_params
 
 gen = ParameterGenerator()
 
@@ -24,6 +23,10 @@ gen.add("max_vel_lin", double_t, 0,
 	"Maximum linear velocity in m/s",
 	1.0, 0.1,  1.0)
 
+gen.add("min_vel_lin", double_t, 0, 
+	"Minimum linear velocity in m/s",
+	1.0, 0.1,  1.0)
+
 gen.add("max_vel_lin_at_goal", double_t, 0, 
 	"Maximum linear velocity when approaching the goal",
 	0.1, 0.1,  1.0)
@@ -32,13 +35,17 @@ gen.add("max_vel_theta", double_t, 0,
 	"Maximum angular velocity in rad/s",
 	1.0, 0.1,  1.0)
 
+gen.add("min_vel_theta", double_t, 0, 
+	"Minimum angular velocity in rad/s",
+	0.1, 0.1,  1.0)
+
 gen.add("acc_lim_lin", double_t, 0, 
 	"Linear acceleration limit in m/(s*s)",
-	1.0, 0.1,  1.0)
+	1.0, 0.1,  3.0)
 
 gen.add("acc_lim_theta", double_t, 0, 
 	"Angular acceleration limit in rad/(s*s)",
-	1.0, 0.1,  1.0)
+	1.0, 0.1,  3.0)
 
 gen.add("rot_to_goal_pose_dist", double_t, 0, 
 	"Distance to global goal before the orientation of the goal pose is taken ",
@@ -46,7 +53,7 @@ gen.add("rot_to_goal_pose_dist", double_t, 0,
 
 gen.add("angle_k", double_t, 0, 
 	"Multiplier for angle regulation",
-	2.0, 0.1,  1.0)
+	1.0, 0.1,  2.0)
 
 gen.add("goal_k", double_t, 0, 
 	"Factor for local goal addition in potential field",
@@ -62,7 +69,7 @@ gen.add("rotate_from_obstacles_k", double_t, 0,
 
 gen.add("pot_min_dist", double_t, 0, 
 	"Minimum distance to consider for collision avoidance. All obstacles further away will be ignored,",
-	0.2, 0.1, 2.0)
+	0.2, 0.1, 1.5)
 
 gen.add("cutoff_factor_at_goal", double_t, 0, 
 	"Factor to scale down the repelling vector when the goal is close to obstacles",
@@ -70,12 +77,19 @@ gen.add("cutoff_factor_at_goal", double_t, 0,
 
 gen.add("goal_threshold_linear", double_t, 0, 
 	"Linear goal threshold",
-	1.0, 0.01,  0.05)
+	0.05, 0.01,  1.00)
 
 gen.add("goal_threshold_angular", double_t, 0, 
 	"Angular goal threshold",
-	1.0, 0.01,  0.05)
+	0.05, 0.01,  1.00)
 
+gen.add("lookahead_distance", double_t, 0, 
+	"Distance from robot to the next waypoint of the global path to be selected",
+	1.0, 0.1,  5.0)
+
+gen.add("ang_trans_k", double_t, 0, 
+	"Multiplier to influence the translational speeds based on the current angular speed",
+	1.0, 0.0,  5.0)
 #gen.add("teb_autosize",   bool_t,   0, 
 #	"Enable the automatic resizing of the trajectory during optimization (based on the temporal resolution of the trajectory, recommended)",
 #	True)
